# lakay-intelligence

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  ci.yaml  model-training.yaml
docs/: behavior-analytics-validation-report.md  circle-health-validation-report.md  compliance-validation-report.md  dashboard-queries.sql  feature-store-architecture.md  integration-runbook.md  model-governance.md  monitoring-queries.sql
docs/architecture-decisions/: 001-event-schema-design.md
docs/governance/: bias-audit-template.md  deployment-procedures.md  drift-monitoring.md  model-inventory.md
docs/integration/: api-reference.md  architecture.md  configuration.md  generators.md  load-test-results.md  runbook.md  security-audit-report.md
generators/: README.md  base.py  circle_generator.py  cli.py  remittance_generator.py  session_generator.py  transaction_generator.py
generators/configs/: default_circle.yaml  default_remittance.yaml  default_session.yaml  default_transaction.yaml  fraud_scenarios.yaml  stress_test.yaml
generators/utils/: distributions.py  geography.py  names.py
scripts/: verify_kafka_flow.py
src/: config.py  main.py
src/consumers/: base.py  circle_consumer.py  remittance_consumer.py  session_consumer.py  transaction_consumer.py
src/db/: database.py  models.py
src/features/: __init__.py  store.py  validation.py
src/pipeline/: __init__.py  aggregations.py  bronze.py  compliance_reports.py  dashboards.py  experiment_models.py  experimentation.py  gold.py  metrics.py  models.py  pii.py  quality.py  silver.py  storage.py
src/serving/: __init__.py  config.py  deploy.py  drift.py  monitoring.py  registry.py  routing.py  server.py
src/shared/: kafka_utils.py  logging.py  schemas.py
tests/: conftest.py
tests/features/: test_skew.py
tests/integration/: test_api_contracts.py  test_cross_domain.py  test_database.py  test_e2e_ato_pipeline.py  test_e2e_flows.py  test_e2e_ml_pipeline.py  test_health_endpoints.py  test_kafka_ingestion.py  test_schema_compliance.py  test_security.py
tests/load/: harness.py  test_harness.py
tests/pipeline/: test_aggregations.py  test_bronze.py  test_compliance_reports.py  test_experimentation.py  test_metrics.py  test_pii.py  test_quality.py  test_silver.py
tests/serving/: test_deploy.py  test_drift.py  test_features.py  test_model_server.py  test_monitoring.py  test_registry.py  test_routing.py  test_serving_config.py
tests/unit/: test_alert_pipeline.py  test_amount_rules.py  test_config.py  test_fraud_rules.py  test_fraud_scorer.py  test_geo_rules.py  test_pattern_rules.py  test_rules_engine.py  (+2 more)
(+86 files in other folders)
