[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakay-intelligence"
version = "0.1.0"
description = "AI/ML intelligence microservice for Trebanx fintech platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "aiokafka>=0.11.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "jsonschema>=4.23.0",
    "httpx>=0.27.0",
    "numpy>=2.1.0",
    "pyyaml>=6.0.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
ml = [
    "mlflow>=2.15.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "boto3>=1.35.0",
    "feast[redis,postgres]>=0.40.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "faker>=30.0.0",
    "scikit-learn>=1.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external services",
    "slow: slow-running tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
